--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@speechly/speech-recognition-polyfill": "^1.2.0",
     "axios": "^1.1.2",
     "geoip-lite": "^1.4.6",
     "next": "12.3.1",
