--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@speechly/speech-recognition-polyfill": "^1.2.0",
     "axios": "^1.1.2",
-    "geoip-lite": "^1.4.6",
     "next": "12.3.1",
     "openai": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-speech-recognition": "^3.10.0",
-    "regenerator-runtime": "^0.13.10",
-    "request-ip": "^3.3.0"
+    "regenerator-runtime": "^0.13.10"
   },
   "devDependencies": {
     "eslint": "8.25.0",
